--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,4 +1,7 @@
-$text-color: #fff;
+$text-color-white: #fff;
+$text-color-grey: #B3B3B3;
 $background-color: #121212;
 $background-sidebar: #040404;
 $background-playback: #282828;
+$scrollbar-color: #4f4f4f;
+$scrollbar-color-hover: #828282;
