--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -4,6 +4,7 @@
 @import "./header";
 @import "./main-area";
 @import "./playback";
+@import "./scrollbar";
 
 * {
     margin: 0;
@@ -24,7 +25,7 @@ html {
 
 body {
     font-family: 'Open Sans', sans-serif;
-    color: $text-color;
+    color: $text-color-white;
     background-color: $background-color;
 }
 
