--- a/src/styles/_main-area.scss
+++ b/src/styles/_main-area.scss
@@ -12,7 +12,7 @@
         display: flex;
         justify-content: space-between;
         align-items: center;
-        padding: 1.6rem;
+        padding: 2.4rem;
     
         .header-flechas {
             display: flex;
@@ -21,7 +21,7 @@
     
             .flecha {
                 font-size: 3.2rem;
-                margin: 0 1rem;
+                margin: 0 2rem 0 0;
                 color: $text-color-grey; 
             }
         } 
@@ -64,7 +64,60 @@
     .section {
         display: flex;
         width: 100%;
-        
+        flex-wrap: wrap;
 
+        .section-header {
+            padding: 0 2.4rem 1.6rem 2.4rem;
+            width: 100%;
+
+            .section-titulo{
+                font-size: 2.4rem;
+                font-weight: 700;
+            }
+        }
+        
+        .section-body {
+            padding: 0 2.4rem 1.6rem 2.4rem;
+            width: 100%;
+            display: flex;
+            justify-content: space-between;
+
+            .section-body-card {
+                width: 16.5rem;
+                height: 24rem;
+                background-color: $background-playback;
+                padding: 1.6rem;
+                margin: 0 1.6rem;
+                border-radius: 1rem;
+                cursor: pointer;
+
+                .card-img {
+                    border-radius: 1rem;
+                    box-shadow: 0 10px 30px 0 rgba(0,0,0,.3), 0 1px 2px 0 rgba(0,0,0,.2);
+                }
+
+                .card-title {
+                    margin-top: 1.6rem;
+                    font-weight: 700;
+                    font-size: 1.6rem;
+                    text-overflow: ellipsis;
+                    overflow-x: hidden;
+                    white-space: nowrap;
+                }
+
+                .card-subtitle {
+                    margin-top: 1.6rem;
+                    font-size: 1.2rem;
+                    text-overflow: ellipsis;
+                    overflow-x: hidden;
+                    white-space: nowrap;
+                    color: $text-color-grey;
+                    
+                    &:hover {
+                        border-bottom: 1px solid $text-color-grey;
+                    }
+                }
+            }
+        }
     }
 }
