--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -5,3 +5,4 @@ $background-sidebar: #040404;
 $background-playback: #282828;
 $scrollbar-color: #4f4f4f;
 $scrollbar-color-hover: #828282;
+$duration-hover-background: #1db954;
