--- a/src/styles/_main-area.scss
+++ b/src/styles/_main-area.scss
@@ -90,6 +90,8 @@
                 cursor: pointer;
 
                 .card-img {
+                    width: 100%;
+                    height: 13.3rem;
                     box-shadow: 0 10px 30px 0 rgba(0,0,0,.3), 0 1px 2px 0 rgba(0,0,0,.2);
                 }
 
